<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sancheztech.mascota.ConfigurarCuentaActivity">
    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>
    <TextView
        android:id="@+id/tvTituloConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloConf"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="@dimen/textSize"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilUsuario"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUsuario"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnCuentaInst"
        android:layout_marginTop="@dimen/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textoBotonInst"
        android:theme="@style/botonRaise"/>
</LinearLayout>
